# AnyRank

./: LICENSE  README.md  Roboarena_BT.npy  Roboarena_preference.npy  Roboarena_preference_old.npy  bradley_terry.py  environment.yml  process_roboarena_data_for_bradley_terry.py  pyproject.toml  run_base_graphical_method.sh  run_bt.sh
data/: parser.py  per_trial_progress_data.csv  policy_preferences.csv  policy_preferences_no_tie.csv  policy_stats.csv  robo_arena_data_parser.py
data/lbm_large/: lbm_raw.xlsx
data/roboarena/: per_trial_binary_data.csv  policy_preferences.csv  roboarena_policy_performance_oracle_progress.npy
scripts/: barplot_sample_complexity.py  bootstrap_bradley_terry_em_method.py  bootstrap_bradley_terry_em_non_transitive.py  bootstrap_bradley_terry_full_metrics.py  bootstrap_bradley_terry_full_metrics_non_transitive.py  bootstrap_bradley_terry_self_consistency.py  bradley_terry.py  bradley_terry_self_consistency.py  bradley_terry_v2.py  compare_bt_and_holm_plot.py  compare_hypothesis_fraction.py  inconsisent_bt_plot.py  irom_data.py  lbm_graphical_test.py  lbm_individual_test.py  lbm_priors.py  pairwise.py  plot_irom_data.py  plot_policy_rankings.py  roboarena_bradley_terry.py  roboarena_graphical_test.py  roboarena_individual_test.py  roboarena_priors.py  savings_and_fpr_graphical_synthetic_data.py  savings_fst.py  savings_graphical.py  savings_graphical_wm.py  savings_graphical_wm_sequential.py  savings_graphical_wm_sequential_artificial.py  savings_heuristic.py  synth_data.py  tabulate.py  test.py  vary_policies.py
slurm/: lbm.sh  roboarena.sh
(+165 files in other folders)
